# buckets-src

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpp.hint
include/rpmc/const/: cgs.hpp
include/rpmc/detail/: checked.hpp  filling-factors.hpp  rpmc.hpp
include/rpmc/operators/: operator.hpp  rpmc-traditional.hpp  rpmc.hpp
include/rpmc/operators/rpmc/: common.hpp
include/rpmc/operators/rpmc/buckets/: log.hpp
include/rpmc/operators/rpmc/classifiers/: mass-and-swarm-regime.hpp  mass.hpp  mers.hpp  regime.hpp
include/rpmc/operators/rpmc/locators/: linear.hpp  log.hpp
include/rpmc/operators/rpmc/models/: collision.hpp  friction.hpp  geometric.hpp  model.hpp  stirring.hpp
include/rpmc/operators/rpmc/models/collision/: geometric.hpp  test.hpp
include/rpmc/simulations/: event-driven.hpp  simulation.hpp
include/rpmc/tools/: bucketing.hpp  expandoarray.hpp  hash.hpp  hashexpandoarray.hpp  math.hpp  particles.hpp  sensitivity.hpp  soa.hpp  utility.hpp
script/: bucketing-plots.py
script/const/: cgs.py
script/planets/: implicit.py  plot.py  quantities.py  simulation.py  types.py
script/tools/: argparse.py  configuration.py  data.py  parameters.py  projection.py  quantity.py
src/py-rpmc/: CMakeLists.txt  assert-handler.cpp  module.cpp  py-convert.cpp  py-convert.hpp  py-rpmc-simulation.cpp  py-rpmc-traditional-simulation.cpp  py-simulation.hpp  py-utility.hpp  pybind11ext.hpp
src/rpmc/: CMakeLists.txt  rpmc.natvis
test/rpmc/: CMakeLists.txt  test-expandoarray.cpp  test-filling-factors.cpp
